--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,17 +8,15 @@
     <ul class="main-menu w-100">
       <li>
         <%= link_to t("Home"), root_path %></a>
-        <ul>
-          <li><a href="index.html" title="">Home Social</a></li>
-        </ul>
       </li>
-      <li>
-        <%= link_to t("Timeline"), timeline_path %>
-      </li>
+      <% if user_signed_in? %>
+        <li>
+          <%= link_to t("Timeline"), timeline_path %>
+        </li>
+      <% end %>
       <li>
         <a href="#" title=""><%= I18n.t ".More_Pages"  %></a>
         <ul>
-          <li><a href="404.html" title="">404 error page</a></li>
           <li><a href="about.html" title="">about</a></li>
           <li><a href="contact.html" title="">contact</a></li>
           <li><%= link_to "English", locale:"en" %>
@@ -28,6 +26,11 @@
         </ul>
       </li>
       <% if user_signed_in? %>
+        <% if current_user.business? %>
+          <li>
+            <%= link_to t("button.create_tour"), new_tour_path %>
+          </li>
+        <% end %>
         <li style="float: right;">
           <div class="user-img">
             <%= image_tag current_user.image.image_link.to_s if current_user.image.present? %>
@@ -64,11 +67,6 @@
           <% end %>
         </li>
       <% else %>
-        <li style="float: right;">
-          <%= link_to users_path do %>
-            <i class="ti-comment"></i>
-          <% end %>
-        </li>
         <li class="hash-children" style="float: right;">
           <%= link_to new_user_session_path do %>
             <i class="ti-crown"></i>
