--- a/app/views/sidebars/_sidebar-1.html.erb
+++ b/app/views/sidebars/_sidebar-1.html.erb
@@ -1,5 +1,21 @@
 <aside class="sidebar static">
   <div class="widget">
+    <h4 class="widget-title"><%= I18n.t ".SOCIALS" %></h4>
+    <ul class="socials">
+      <li class="facebook">
+        <a title="" href="#"><i class="fa fa-facebook"></i> <span>facebook</span> <ins>45 likes</ins></a>
+      </li>
+      <li class="twitter">
+        <a title="" href="#"><i class="fa fa-twitter"></i> <span>twitter</span><ins>25 likes</ins></a>
+      </li>
+      <li class="google">
+        <a title="" href="#"><i class="fa fa-google"></i> <span>google</span><ins>35 likes</ins></a>
+      </li>
+    </ul>
+  </div>
+</aside>
+<aside class="sidebar static">
+  <div class="widget">
     <h4 class="widget-title"><%= I18n.t ".SHORTCUTS" %></h4>
     <ul class="naves">
       <li>
