--- a/app/views/statuses/_status.html.erb
+++ b/app/views/statuses/_status.html.erb
@@ -11,10 +11,9 @@
             <span><%= t("text.published") %>: <%= time_ago_in_words(status.created_at) %></span>
           </div>
         </ul>
-        <ul class="main-menu" >
+        <ul class="main-menu" style="float: right;" >
           <li>
-            <a href="#" title="Setting" data-toggle="dropdown"></a>
-            <ul>
+            <ul style="position-right: 0px">
               <li><%= link_to t("button.edit_post"), edit_status_path(status), remote: true %></li>
               <li><%= link_to t("button.delete"), status_path(status), method: :delete, data: {confirm: t("text.confirm")} %></li>
             </ul>
