--- a/app/assets/stylesheets/admin/application.css.scss
+++ b/app/assets/stylesheets/admin/application.css.scss
@@ -4,6 +4,7 @@
  *= require ./css/style.min.css
  *= require ./css/dataTables.bootstrap4.css
  *= require ./css/multicheck.css
+ *= require toastr
  */
 @import "font-awesome";
 @import "themify-icons";
