--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -14,7 +14,6 @@
   <button class="btn-comment" data-toggle="collapse"
   data-target="#comments_form" aria-expanded="false"
   aria-controls="collapseExample">
-    <%= link_to "Login First", login_path, {:style=>"color:#FFFFFF;",
-      :class => "css_class"} %>
+    <%= link_to "Login First", new_user_session_path %>
   </button>
 <% end %>
