--- a/app/assets/stylesheets/lib/customs.scss
+++ b/app/assets/stylesheets/lib/customs.scss
@@ -184,3 +184,112 @@
 #user-chat img {
     border-radius: 50%;
 }
+ul.notificator {
+  display: inline-block;
+  float:right;
+  margin: 0;
+  top: 12px;
+  position: relative;
+  li
+  {
+    position: relative;
+    list-style: none;
+
+    i
+    {
+      color: #fff;
+    }
+  }
+}
+
+#notification-counter {
+  position: absolute;
+  top: -35px;
+  left: 25px;
+  background-color: #d44e03;
+  color: #fff;
+  border-radius: 3px;
+  padding: 1px 3px;
+  font: 15px Verdana;
+}
+ul #notificationList
+{
+  li
+  {
+    position:relative;
+    border-bottom: #dddddd 1px solid;
+  }
+  span
+  {
+    color: #989494;
+    font-size: 8px;
+  }
+
+}
+
+#notificationsBody  ul
+{
+  padding-left: 0;
+}
+
+#notificationContainer
+{
+  background-color: #fff;
+  border: 1px solid rgba(100, 100, 100, .4);
+  -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
+  overflow: visible;
+  position: absolute;
+  top: 70px;
+  margin-left: -253px;
+  width: 300px;
+  z-index: 0;
+  display: none;
+}
+
+
+#notificationContainer:before {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 0;
+  height: 0;
+  color: transparent;
+  border: 10px solid black;
+  border-color: transparent transparent white;
+  margin-top: -20px;
+  margin-left: 258px;
+}
+
+#notificationTitle
+{
+  font-weight: bold;
+  padding: 5px;
+  font-size: 14px;
+  background-color: #f0f0f0;
+  position: absolute;
+  z-index: 1;
+  width: 300px;
+  border-bottom: 1px solid #d44e03;
+  color: #d44e03;
+}
+
+#notificationsBody
+{
+  padding: 30px 15px 0px 15px !important;
+  min-height:300px;
+  max-height:300px;
+  overflow: auto;
+  position: relative;
+  width: 100%;
+}
+
+
+#notificationFooter
+{
+  background-color: #e9eaed;
+  text-align: center;
+  font-weight: bold;
+  padding: 3px;
+  font-size: 12px;
+  border-top: 1px solid #dddddd;
+}
