--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,18 +10,24 @@
   </head>
 
   <body>
-    <%= render "layouts/header" %>
-    <% if notice %>
-      <div class="alert alert-success alert-dismissible fade show">
+    <%= render "layouts/header", notifications: @notifications %>
+    <%# if notice %>
+      <!-- <div class="alert alert-success alert-dismissible fade show">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <p><%= notice %></p>
-      </div>
-    <% elsif alert %>
-      <div class="alert alert-danger alert-dismissible fade show">
+        <p><%#= notice %></p>
+      </div> -->
+    <%# elsif alert %>
+      <!-- <div class="alert alert-danger alert-dismissible fade show">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <p><%= alert %></p>
-      </div>
-    <% end %>
+        <p><%#= alert %></p>
+      </div> -->
+    <%# end %>
+    <script type="text/javascript">
+      <% flash.each do |f| %>
+      <% type = f[0].to_s.gsub('alert', 'error').gsub('notice', 'info') %>
+       toastr['<%= type %>']('<%= f[1] %>');
+      <% end %>
+    </script>
     <%= yield %>
     <%= render "layouts/footer" %>
   </body>
