--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -175,8 +175,8 @@
                           <%= link_to tour.title, tour_path(tour) %>
                           <h6>Started by: <%= tour.created_at %></h6>
                         </td>
-                        <td></td>
-                        <td></td>
+                        <td><%= tour.interactives.view.size %></td>
+                        <td><%= tour.interactives.like.size %></td>
                         <td><%= tour.comments.size %></td>
                       </tr>
                     <% end %>
