--- a/app/views/sidebars/_sidebar-4.html.erb
+++ b/app/views/sidebars/_sidebar-4.html.erb
@@ -8,7 +8,7 @@
       </li>
       <li>
         <a href="" title=""><%= t("Total_Status") %></a>
-        <span>50</span>
+        <span><%= @statuses.size %></span>
       </li>
       <li>
         <a href="" title=""><%= t("Total_follow") %></a>
