--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -22,14 +22,20 @@
       <div class="container">
         <div class="row remove-ext-40">
           <div class=" col-lg-12">
+            <div class="personal">
+              <h5 class="f-title"><i class="ti-info-alt"></i><%= t("Place_Info") %></h5>
+              <p>
+                <%= @place.detail %>
+              </p>
+            </div>
             <div class="section-heading">
               <h2><%= t("text.tour_newest") %></h2>
             </div>
             <div class="post-filter-sec">
-              <form method="post" class="filter-form">
-                <input type="post" placeholder="Search post">
+              <%= search_form_for @q, url: place_path(@place), class: "filter-form" do |f| %>
+                <%= f.search_field :title_or_time_or_vehicle_or_cost_cont, placeholder: t("Search_post"), type: "post" %>
                 <button><i class="ti-search"></i></button>
-              </form>
+              <% end %>
               <div class="purify">
                 <span>filter by</span>
                 <select style="display: none;">
@@ -47,10 +53,22 @@
               </div>
             </div>
           </div>
-          <% @tours.each do |tour| %>
-            <div class="col-lg-4 col-sm-6">
-              <%= render "tours/tour", tour: tour %>
-            </div>
+          <% if params[:q] %>
+            <% if @tours_search.blank? %>
+              <div class="col-lg-12" style="text-align: center;"><h5><%= t("Not_found")%></h5></div>
+            <% else %>
+              <% @tours_search.each do |tour| %>
+                <div class="col-lg-4 col-sm-6">
+                  <%= render "tours/tour", tour: tour %>
+                </div>
+              <% end %>
+            <% end %>
+          <% else %>
+            <% @tours.each do |tour| %>
+              <div class="col-lg-4 col-sm-6">
+                <%= render "tours/tour", tour: tour %>
+              </div>
+            <% end %>
           <% end %>
           <div class="col-lg-12">
             <div class="section-heading">
