--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -51,6 +51,13 @@
                 <%= (I18n.t ".Edit_Password") %>
               <% end %>
             </li>
+            <% if current_user.user? %>
+              <li><%= link_to new_business_path do %>
+                <i class="ti-panel"></i>
+                  <%= t("Registration_business") %>
+                <% end %>
+              </li>
+            <% end %>
             <li><%= link_to destroy_user_session_path,
               data: { confirm: "Sure ?" }, method: :delete do %>
               <i class="ti-power-off"></i>
