--- a/app/views/layouts/admin/_header.html.erb
+++ b/app/views/layouts/admin/_header.html.erb
@@ -48,50 +48,23 @@
           </div>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" id="2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="font-24 mdi mdi-comment-processing"></i>
+          <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" id="2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="font-24 mdi mdi-comment-processing"></i><span class="badge badge-pill badge-danger rounded-circle" style="padding: 4px; position: inherit; bottom: 15px; left: -5px;"><%= count_noti_business %></span>
           </a>
           <div class="dropdown-menu dropdown-menu-right mailbox animated bounceInDown" aria-labelledby="2">
-            <ul class="list-style-none">
-              <li>
-                <div class="">
-                  <a href="javascript:void(0)" class="link border-top">
+            <ul class="list-style-none" id="signup_business">
+              <% noti_business.each do |noti| %>
+                <li>
+                  <%= link_to admin_user_path(noti.user), class: "link border-top" do %>
                     <div class="d-flex no-block align-items-center p-10">
-                      <span class="btn btn-success btn-circle"><i class="ti-calendar"></i></span>
+                      <span><%= image_tag noti.user.image.image_link.to_s, alt:"user", class:"rounded-circle", width:"50" if noti.user.image %></span>
                       <div class="m-l-10">
-                        <h5 class="m-b-0">Event today</h5>
-                        <span class="mail-desc">Just a reminder that event</span>
+                        <h5 class="m-b-0"><%= noti.user.name %></h5>
+                        <span class="mail-desc">I want to become a business!</span>
                       </div>
                     </div>
-                  </a>
-                  <a href="javascript:void(0)" class="link border-top">
-                    <div class="d-flex no-block align-items-center p-10">
-                      <span class="btn btn-info btn-circle"><i class="ti-settings"></i></span>
-                      <div class="m-l-10">
-                        <h5 class="m-b-0">Settings</h5>
-                        <span class="mail-desc">You can customize this template</span>
-                      </div>
-                    </div>
-                  </a>
-                  <a href="javascript:void(0)" class="link border-top">
-                    <div class="d-flex no-block align-items-center p-10">
-                      <span class="btn btn-primary btn-circle"><i class="ti-user"></i></span>
-                      <div class="m-l-10">
-                        <h5 class="m-b-0">Pavan kumar</h5>
-                        <span class="mail-desc">Just see the my admin!</span>
-                      </div>
-                    </div>
-                  </a>
-                  <a href="javascript:void(0)" class="link border-top">
-                    <div class="d-flex no-block align-items-center p-10">
-                      <span class="btn btn-danger btn-circle"><i class="fa fa-link"></i></span>
-                      <div class="m-l-10">
-                        <h5 class="m-b-0">Luanch Admin</h5>
-                        <span class="mail-desc">Just see the my new admin!</span>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </li>
+                  <% end %>
+                </li>
+              <% end %>
             </ul>
           </div>
         </li>
