--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag "admin/application", media: "all", "data-turbolinks-track": "reload" %>
     <%= javascript_include_tag "admin/application", "data-turbolinks-track": "reload" %>
+    <%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %>
   </head>
 
   <body>
