--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -196,6 +196,87 @@
       </div>
     </section>
   </div>
+  <div class="tab-pane fade" id="Photos">
+    <section>
+      <div class="gap gray-bg">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-3">
+              <%= render "sidebars/sidebar-1" %>
+            </div>
+            <div class="col-lg-9">
+              <div class="central-meta">
+                <ul class="photos">
+                  <% @user.posts.each do |post| %>
+                    <li>
+                      <% if post.image %>
+                        <a class="strip" href="<%= post.image.image_link.to_s %>" title="" data-strip-group="mygroup" data-strip-group-options="loop: false">
+                        <img src="<%= post.image.image_link.to_s %>" alt=""></a>
+                      <% end %>
+                    </li>
+                  <% end %>
+                </ul>
+                <div class="lodmore"><button class="btn-view btn-load-more"></button></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+  <div class="tab-pane fade" id="About">
+    <section>
+      <div class="gap gray-bg">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-3">
+              <% if @user.business? %>
+                <aside class="sidebar static">
+                  <div class="widget">
+                    <h4 class="widget-title"><%= t("SOCIALS") %></h4>
+                    <ul class="socials">
+                      <li class="facebook">
+                        <a title="" href="<%= @user.business.social_acount1 %>"><i class="fa fa-facebook"></i> <span>facebook</span> <ins>45 likes</ins></a>
+                      </li>
+                      <li class="twitter">
+                        <a title="" href="<%= @user.business.social_acount2 %>"><i class="fa fa-twitter"></i> <span>twitter</span><ins>25 likes</ins></a>
+                      </li>
+                      <li class="google">
+                        <a title="" href="<%= @user.business.social_acount3 %>"><i class="fa fa-google"></i> <span>google</span><ins>35 likes</ins></a>
+                      </li>
+                      <li class="facebook">
+                        <a title="" href="<%= @user.business.social_acount4 %>"><i class="fa fa-instagram"></i> <span>instagram</span><ins>35 likes</ins></a>
+                      </li>
+                    </ul>
+                  </div>
+                </aside>
+              <% end %>
+              <%= render "sidebars/sidebar-1" %>
+            </div>
+            <div class="col-lg-9" id="page-contents">
+              <div class="central-meta">
+                <% if @user.business? %>
+                  <div class="personal">
+                    <h5 class="f-title"><i class="ti-info-alt"></i>Page Info</h5>
+                    <p>
+                      <%= @user.business.details %>
+                    </p>
+                  </div>
+                  <ul class="basics">
+                    <li><i class="ti-user"></i><%= @user.business.page_name %></li>
+                    <li><i class="ti-map-alt"></i><%= @user.business.address %></li>
+                    <li><i class="ti-mobile"></i><%= @user.business.phone_number %></li>
+                    <li><i class="ti-email"></i><%= @user.business.email %></li>
+                    <li><i class="ti-world"></i><%= @user.business.website %></li>
+                  </ul>
+                <% end %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
   <div class="tab-pane fade" id="Statuses">
     <section>
       <div class="gap gray-bg">
